# django-dynamic-form

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
dynamic_form/: apps.py  exceptions.py  settings.py  types.py  urls.py  views.py
dynamic_form/forms/: __init__.py  dynamic_form.py
dynamic_form/static/dynamic_form/js/: dynamic-form.js
